versions/v2.8/modules/en/pages/integrations/harvester/harvester.adoc
= {harvester-product-name}
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}

Introduced in Rancher v2.6.1, Harvester is an open-source hyper-converged infrastructure (HCI) software built on Kubernetes. Harvester installs on bare metal servers and provides integrated virtualization and distributed storage capabilities. Although Harvester operates using Kubernetes, it does not require knowledge of Kubernetes concepts, making it more user-friendly.

== {harvester-product-name} with Rancher

With Rancher Prime and Harvester, IT operators now have access to an enterprise-ready, simple-to-use infrastructure platform that cohesively manages their virtual machines and Kubernetes clusters alongside one another. For more information on the support offering, see the https://www.suse.com/suse-harvester/support-matrix/all-supported-versions/harvester-v1-2-0/[Support Matrix]. With the Rancher Virtualization Management feature, users can import and manage multiple Harvester clusters. Leveraging the Rancher's authentication feature and RBAC control for multi-tenancy support.
